--- a/frontend/assets/stylesheets/pages/_tier.scss
+++ b/frontend/assets/stylesheets/pages/_tier.scss
@@ -394,15 +394,23 @@ $current-indicator: rem(72px);
         @include fs-textSans(3);
         width: 100%;
         display: block;
+        border: 1px solid transparent;
 
         &:hover {
-            background: $white-trans;
+            border: 1px solid $c-neutral2;
+        }
+
+        &:active {
+            color: $white;
+            background-color: $mem-brandLightblue;
+            transition: background-color .2s ease;
         }
     }
 
     .payment-label__title {
         @include fs-bodyHeading(2);
         display: block;
+        
     }
 
     .payment-label__amount,
@@ -416,13 +424,20 @@ $current-indicator: rem(72px);
 
     input[type=radio] + .payment-label__wrapper {
         display: inline-block;
-        border: rem(1px) solid $c-neutral4;
-        padding: rem($gs-gutter);
+        padding: rem($gs-gutter - 2) rem($gs-gutter) rem($gs-gutter) rem(36px);
+        position: relative;
+
+        &:before {
+            @include radio-circle ($c-neutral5);
+        }
     }
 
     input[type=radio]:checked + .payment-label__wrapper {
         border-color: $mem-brandLightblue;
-        background-color: $white;
+
+        &:before {
+            @include radio-circle ();
+        }
     }
 }
 
@@ -435,8 +450,16 @@ $current-indicator: rem(72px);
         @include fs-bodyCopy(2);
         width: 100%;
         display: block;
+        border: rem(1px) solid transparent;
+
         &:hover {
-            background: $white-trans;
+            border: rem(1px) solid $c-neutral2;
+        }
+
+        &:active {
+            color: $white;
+            background-color: $mem-brandLightblue;
+            transition: background-color .2s ease;
         }
     }
 
@@ -446,14 +469,20 @@ $current-indicator: rem(72px);
 
     input[type=radio] + .payment-label__title {
         display: inline-block;
-        border: rem(1px) solid $c-neutral4;
-        padding: rem($gs-gutter);
+        padding: rem($gs-gutter - 2) rem($gs-gutter) rem($gs-gutter) rem(36px);
+        position: relative;
+
+        &:before {
+            @include radio-circle ($c-neutral5);
+        }
     }
 
     input[type=radio]:checked + .payment-label__title {
         border-color: $mem-brandLightblue;
-        background-color: $white;
-        font-weight: bold;
+
+        &:before {
+            @include radio-circle ();
+        }
     }
 
 }
