--- a/frontend/app/views/fragments/form/cardDetail.scala.html
+++ b/frontend/app/views/fragments/form/cardDetail.scala.html
@@ -25,7 +25,7 @@
     <div class="fieldset__fields">
         <div class="form-field">
             <div class="u-cf">
-                <label class="label form-field__note form-field__note--left" for="cc-num">Card Number</label>
+                <label class="label form-field__note form-field__note--left" for="cc-num">Card number</label>
                 <div class="form-field__note form-field__note--right">
                     <ul class="credit-card-container inline-list">
                         <li class="credit-card-container-list__item inline-list__item">
