Show correct logo on event details page

--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -5,7 +5,7 @@
         <h1 class="header-bar__title">
             A unique programme of learning within one of the world's most forward-thinking media organisations
         </h1>
-        <i class="header-bar__logo icon-sprite icon-sprite-masterclasses"></i>
+        <i class="event-logo icon-sprite-masterclasses"></i>
     </section>
 
     @views.html.event.list(eventPortfolio, pageInfo)
