--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -37,6 +37,13 @@
     }
 }
 
+@icon = @{
+    event match {
+        case _: MasterclassEvent => "icon-sprite-masterclasses"
+        case _: GuLiveEvent => "icon-sprite-guardian-live"
+    }
+}
+
 @main("Event Detail | " + event.name.text, pageInfo=pageInfo, containerPadding = false, isBrochure = true, htmlClass = "js-event " + theme) {
 
     <div class="event-header">
@@ -98,9 +105,7 @@
                     </div>
                 }
             }
-            <div class="guardian-live-logo">
-                <i class="icon-sprite icon-sprite-guardian-live icon-sprite--resize-live-logo"></i>
-            </div>
+            <i class="event-logo @icon"></i>
         </div>
 
     </div>
