--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -31,10 +31,11 @@
         <div class="tickets-select-form__detail hidden-mobile u-cf js-select-tier">
             <p class="tickets-select-form__leadin">@Benefits.details(tier).leadin</p>
             <ul class="u-unstyled">
-                @for((header, body, icon) <- Benefits.details(tier).list) {
-                <li class="benefits-title"><i class="icon-sprite icon-sprite-@icon icon-sprite--small"></i>@header</li>
-                <li class="benefits-copy">@body</li>
                 @for((header, body, icon) <- Benefits.details(tier).list.slice(0, Benefits.details(tier).leadBenefits)) {
+                <div class="benefit-item--@icon">
+                    <li class="benefits-title"><i class="icon-sprite icon-sprite-@icon icon-sprite--small"></i>@header</li>
+                    <li class="benefits-copy">@body</li>
+                </div>
                 }
             </ul>
         </div>
