--- a/frontend/assets/stylesheets/pages/_login.scss
+++ b/frontend/assets/stylesheets/pages/_login.scss
@@ -1,5 +1,6 @@
 .section-signin,
-.section-payment {
+.section-payment,
+.section-two-thirds {
     background-color: $white;
     margin: 0 auto;
     padding: rem($gs-baseline / 2) rem($gs-gutter / 2) rem($gs-gutter + $gs-baseline);
