--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -42,7 +42,7 @@
 
 @main("Join Choose Tier", pageInfo=pageInfo, containerPadding = false, isBrochure = true) {
 
-    <section class="section-two-thirds">
+    <section class="section-two-thirds u-cf">
 
         @fragments.form.sectionHeading("Choose a membership tier")
 
