joinstepCounter html is now in the fragment

--- a/frontend/app/views/fragments/joiner/joinStepCounter.scala.html
+++ b/frontend/app/views/fragments/joiner/joinStepCounter.scala.html
@@ -1,4 +1,6 @@
 @(  CurrentStep: Int,
     TotalSteps: Int)
 
-Step @CurrentStep of @TotalSteps
+    <div class="steps">
+		Step @CurrentStep of @TotalSteps
+	</div>
