--- a/frontend/app/views/info/about.scala.html
+++ b/frontend/app/views/info/about.scala.html
@@ -59,7 +59,7 @@
                 </li>
                 <li class="benefits__list--items">
                     <i class="icon-sprite icon-sprite__left icon-sprite-large-early_booking"></i>
-                    <span class="benefits__list--header">Early Booking</span>
+                    <span class="benefits__list--header">Early booking</span>
                     <p>Early booking for Partners and Patrons</p>
                 </li>
             </ul>
@@ -69,7 +69,7 @@
     <div class="home-slice home-slice--join-today">
         <div class="home-slice__inner u-cf">
             <h2 class="home-slice__headline">Join Guardian Membership today</h2>
-            <div class="join-today__join-boxes package-list package-list--bordered">
+            <div class="join-today__join-boxes package-list package-list--flex-box package-list--bordered">
                 @fragments.tier.benefits(currentTier=None, tier=Tier.Friend, showBenefitDetails=true, mode="promo", showBenefitCopy=false)
                 @fragments.tier.benefits(currentTier=None, tier=Tier.Partner, showBenefitDetails=true, mode="promo", showBenefitCopy=false)
                 @fragments.tier.benefits(currentTier=None, tier=Tier.Patron, showBenefitDetails=true, mode="promo", showBenefitCopy=false)
