--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -31,10 +31,10 @@
         <div class="tickets-select-form__detail hidden-mobile u-cf js-select-tier">
             <p class="tickets-select-form__leadin">@Benefits.details(tier).leadin</p>
             <ul class="u-unstyled">
-                @for((header, body, icon) <- Benefits.details(tier).list.slice(0, Benefits.details(tier).leadBenefits)) {
-                <div class="benefit-item--@icon">
-                    <li class="benefits-title"><i class="icon-sprite icon-sprite-@icon icon-sprite--small"></i>@header</li>
-                    <li class="benefits-copy">@body</li>
+                @for(benefit <- Benefits.details(tier).leadBenefits) {
+                <div class="benefit-item--@benefit.identifier">
+                    <li class="benefits-title"><i class="icon-sprite icon-sprite-@benefit.identifier icon-sprite--small"></i>@benefit.title</li>
+                    <li class="benefits-copy">@benefit.description</li>
                 </div>
                 }
             </ul>
