--- a/frontend/app/views/login/signin.scala.html
+++ b/frontend/app/views/login/signin.scala.html
@@ -26,9 +26,9 @@
             <p>@Benefits.details(tier).leadin</p>
 
             <ul class="package__list-benefits-element">
-            @for((header, body, icon) <- Benefits.details(tier).list.slice(0, Benefits.details(tier).leadBenefits)) {
-                <li class="benefits-title">@header</li>
-                <li class="benefits-copy">@body</li>
+            @for(benefit <- Benefits.details(tier).leadBenefits) {
+                <li class="benefits-title">@benefit.title</li>
+                <li class="benefits-copy">@benefit.description</li>
             }
             </ul>
 
