--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -13,7 +13,7 @@
         <a href="/tier/change" class="action action--arrow-left action-cta--confirm">Back</a>
 
         <div class="package-container">
-            <div class="package-list">
+            <div class="package-list package-list--flex-box">
 
                 @fragments.tier.benefits(currentTier=Some(currentTier), tier=currentTier, mode="downgrade")
                 @fragments.tier.benefits(currentTier=Some(currentTier), tier=Tier.Friend, mode="downgrade")
