--- a/frontend/app/views/joining/tierChooser.scala.html
+++ b/frontend/app/views/joining/tierChooser.scala.html
@@ -1,87 +1,38 @@
 @(eventOpt: Option[model.Eventbrite.EBEvent], pageInfo: model.PageInfo)(implicit token: play.filters.csrf.CSRF.Token)
 
 @import com.gu.membership.salesforce.Tier
-@import model.Benefits
 @import views.support.Dates._
-@import helper._
-@import model.Eventbrite._
 @import configuration.Config
 
-@benefit(tier: com.gu.membership.salesforce.Tier.Tier, defaultSelection: com.gu.membership.salesforce.Tier.Tier) = {
-    <div class="tickets-select-form__section">
-        <div class="tickets-select-form__header tickets-select-form__header--@tier.toString.toLowerCase u-cf">
-            <label class="tickets-select-form__label" for="@tier.toString.toLowerCase">
-                <input class="tickets-select-form__input"
-                       type="radio"
-                       value="@tier.toString.toLowerCase"
-                       id="@tier.toString.toLowerCase"
-                       name="tier"
-                       @if(tier == defaultSelection){checked="checked"}/>
-            </label>
-            <div class="tickets-select-form-header__secondary u-cf">
-                <div class="price-info-container">
-                    <h2 class="tickets-select-form__tier-name">@tier</h2>
-                </div>
-                <div class="price-info-container price-info-container--last">
-                    @fragments.benefits.priceInfo(Benefits.details(tier))
-                </div>
-                <a class="tickets-select-form__toggle mobile-only js-benefit-header" href="#"></a>
-            </div>
-        </div>
-        <div class="tickets-select-form__detail hidden-mobile u-cf js-select-tier">
-            <p class="tickets-select-form__leadin">@Benefits.details(tier).leadin</p>
-            <ul class="u-unstyled">
-                @for((header, body, icon) <- Benefits.details(tier).list) {
-                <li class="benefits-title"><i class="icon-sprite icon-sprite-@icon icon-sprite--small"></i>@header</li>
-                <li class="benefits-copy">@body</li>
-                }
-            </ul>
-        </div>
-    </div>
-}
 
 @main("Join Choose Tier", pageInfo=pageInfo) {
 
     <section class="section-two-thirds">
-
-        @fragments.tickets.ticketsFunnel(1, StepTwo = "", StepThree = "", StepFour = "")
-
         <div class="l-row">
+            <section class="two-thirds">
 
-        <section class="two-thirds">
+                @fragments.tickets.ticketsFunnel(1, StepTwo = "", StepThree = "", StepFour = "")
 
-            @fragments.form.sectionHeading("Choose a membership tier")
+                <header class="section__heading u-cf">
+                    <h1 class="section-headline section-headline--no-margin">Choose a membership tier</h1>
+                </header>
+                <div class="package-list">
+                    @fragments.tier.benefits(currentTier=None, tier=Tier.Friend, showBenefitDetails=true, mode="promo", showChooseDetails=true)
+                    @fragments.tier.benefits(currentTier=None, tier=Tier.Partner, showBenefitDetails=true, mode="promo", showChooseDetails=true)
+                    @fragments.tier.benefits(currentTier=None, tier=Tier.Patron, showBenefitDetails=true, mode="promo", showChooseDetails=true)
+                </div>
 
-            <form action="" method="POST" id="payment-form" class="form tickets-select-form">
-                @CSRF.formField
-
-                @for(tier <- Tier.values.toSeq.sorted){
-                    @if(tier != Tier.None){
-                        @benefit(tier, Tier.Partner)
-                    }
-                }
-
-                <input type="submit" class="action" value="Join today"/>
-
-            </form>
-        </section>@*
-
-            //inline-block whitespace
-
-        *@<section class="one-third">
+            </section>
+            <section class="one-third">
 
             @for(event <- eventOpt) {
-
                 <h2 class="section-sub-headline">You're buying tickets for:</h2>
 
                 <div class="event-item events-list__item event-item--standalone">
                     <div class="event-item__media">
                         <div class="delayed-image-load" data-src="@Config.eventImageUrlPath(event.id)/{width}{pixel_ratio}.jpg" data-alt="Please upload an event image" data-class="responsive-img"></div>
-                    </div>@*
-
-                          // Inline-block whitespace
-
-                    *@<div class="event-item__meta">
+                    </div>
+                    <div class="event-item__meta">
                         <h2 class="event-item__title">
                             @if(event.isSoldOut){
                                 <span class="event-status--sold-out">Sold Out</span>
@@ -90,7 +41,6 @@
                         </h2>
 
                         <div class="event-item__time">@event.start.pretty</div>
-
                         <div class="event-item__location">
                             @if(event.venue.name){
                                 <span class="event-item__location-name">@event.venue.name</span>
@@ -107,7 +57,6 @@
                         }
 
                         <div class="event-item__cta">
-
                             <div class="event-item__price">
                             @for(ticket <- event.generalReleaseTicket) {
                                 @for(pricing <- ticket.cost) {
@@ -118,12 +67,9 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
-
             }
-
-        </section>
+            </section>
         </div>
     </section>
 }
