Title and head copy updates

--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -1,9 +1,9 @@
 @(eventPortfolio: model.EventPortfolio, pageInfo: model.PageInfo)(implicit token: play.filters.csrf.CSRF.Token)
 
-@main("Events", containerPadding=false, htmlClass="events-bg theme--masterclass", pageInfo=pageInfo) {
+@main("Masterclasses", containerPadding=false, htmlClass="events-bg theme--masterclass", pageInfo=pageInfo) {
     <section class="header-bar">
         <h1 class="header-bar__title">
-            A unique programme of learning within one of the world's most forward-thinking media organisations
+            Long and short courses taught by award-winning professionals with discounts for Guardian Members
         </h1>
         <i class="event-logo icon-sprite-masterclasses"></i>
     </section>
