--- a/frontend/assets/stylesheets/components/_benefits.scss
+++ b/frontend/assets/stylesheets/components/_benefits.scss
@@ -1,45 +1,45 @@
 //TODO start of splitting benefits work into one set of styles where it makes sense
 .benefits-item {
 
-	@include mq(tablet) {
-		width: rem(200px);
-	    float: left;
-	    height: rem(150px);
-	    margin: 0 rem($gs-gutter / 2);
+    @include mq(tablet) {
+        width: rem(200px);
+        float: left;
+        height: rem(150px);
+        margin: 0 rem($gs-gutter / 2);
 
-	    .about-membership & {
-	    	height: rem(62px);
-	    }
+        .about-membership & {
+            height: rem(62px);
+        }
 
-	    &:first-child {
-	    	margin-left: 0;
-	    }
+        &:first-child {
+            margin-left: 0;
+        }
 
-// Removes left margin for every third benefit items. eg 3rd, 6th, 9th, 12th, etc. This only applies for mobiles 
-	    &:nth-child(3n+3) {
-	    	margin-left: rem($gs-gutter / 2);
-	    	margin-right: 0;
-	    }
-	}
+// Removes left margin for every third benefit items. eg 3rd, 6th, 9th, 12th, etc. This only applies for mobiles
+        &:nth-child(3n+3) {
+            margin-left: rem($gs-gutter / 2);
+            margin-right: 0;
+        }
+    }
 
-	@include mq(desktop) {
-		width: 100%;
-		float: none;
-		height: auto;
-		margin: 0;
+    @include mq(desktop) {
+        width: 100%;
+        float: none;
+        height: auto;
+        margin: 0;
 
-		.about-membership & {
-			height: auto;
-		}
+        .about-membership & {
+            height: auto;
+        }
 
-		&:nth-child(3n+3) {
-			margin: 0;
-		}
-	}
+        &:nth-child(3n+3) {
+            margin: 0;
+        }
+    }
 }
 
 .benefits-title {
-	@include fs-bodyHeading(2);
+    @include fs-bodyHeading(2);
     border-top: rem(1px) dotted $c-neutral3;
     padding: rem(7px) 0 rem($gs-baseline / 6) 0;
     clear: both;
@@ -50,6 +50,10 @@
     padding: 0 0 rem($gs-baseline) rem(45px);
     display: block;
     float: left;
+}
+
+.benefits-title--first {
+    border-top: none;
 }
 
 .benefits-title__first {
