--- a/frontend/assets/stylesheets/utility/_hidden.scss
+++ b/frontend/assets/stylesheets/utility/_hidden.scss
@@ -4,8 +4,20 @@
     }
 }
 
+.hidden-mobile-portrait {
+    @include mq($until: mobileLandscape) {
+        display: none !important;
+    }
+}
+
 .mobile-only {
     @include mq(tablet) {
+        display: none !important;
+    }
+}
+
+.mobile-portrait-only {
+    @include mq(mobileLandscape) {
         display: none !important;
     }
 }
