--- a/frontend/app/views/joiner/detail/addressForm.scala.html
+++ b/frontend/app/views/joiner/detail/addressForm.scala.html
@@ -11,7 +11,7 @@ passwordExists: Boolean)(implicit token: play.filters.csrf.CSRF.Token)
         <form action="" method="POST" id="payment-form" class="form form-primary-container js-address-form">
             @CSRF.formField
             @fragments.form.errorMessageDisplay()
-            @fragments.form.sectionHeading("Location", true)
+            @fragments.form.sectionHeading("Location")
 
             <div class="form__signin">
                 @fragments.joiner.signedInAs(routes.Joiner.enterDetails(Friend).url)
