--- a/frontend/app/views/tier/upgrade/upgradeForm.scala.html
+++ b/frontend/app/views/tier/upgrade/upgradeForm.scala.html
@@ -5,11 +5,11 @@
 
     <section class="section-payment u-cf">
         @fragments.form.errorMessageDisplay()
-        
+
         <form action="@routes.TierController.upgrade(targetTier)" method="POST" id="payment-form" class="form form-primary-container js-stripe-form" data-change-to-tier="@targetTier">
             @CSRF.formField
-            
-            @fragments.form.sectionHeading("Payment", true)
+
+            @fragments.form.sectionHeading("Payment")
             @fragments.form.addressDetail("Delivery address", "Once you've joined Guardian Membership we'll send you a welcome pack in the post.", "deliveryAddress", true,
             userFields.address1, userFields.address2, userFields.address3, userFields.postcode, userFields.address4, userFields.country)
 
