--- a/frontend/app/views/event/thankyou.scala.html
+++ b/frontend/app/views/event/thankyou.scala.html
@@ -8,7 +8,7 @@
 @main("Event Thankyou - " + event.name.text + " (" + event.id + ")") {
 
     <section class="content__container content__container--slim">
-        <h1 class="section-headline section-headline--no-border">Thanks @order.first_name.<br/> See you there!</h1>
+        <h1 class="section-headline">Thanks @order.first_name.<br/> See you there!</h1>
         <h2 class="content__headline">You're going to</h2>
 
         <div class="event-summary">
