--- a/frontend/assets/stylesheets/layout/_headings.scss
+++ b/frontend/assets/stylesheets/layout/_headings.scss
@@ -6,18 +6,12 @@
     @include fs-headline(5);
 
     @include mq(desktop) {
-        @include fs-headline(8);
+        @include fs-headline(7);
     }
 
-    border-top: rem(20px) solid $mem-blue;
     display: inline-block;
-    padding-top: rem($gs-baseline / 3);
+    padding-top: rem($gs-baseline - 2);
     margin-bottom: rem($gs-baseline * 4);
-}
-
-.section-headline--no-border {
-    padding-top: rem(10px);
-    border-top: 0;
 }
 
 .section-headline--no-margin {
