--- a/frontend/app/views/fragments/form/sectionHeading.scala.html
+++ b/frontend/app/views/fragments/form/sectionHeading.scala.html
@@ -1,3 +1,5 @@
 @(title: String, showRequired: Boolean = false)
 
-<div class="form__section-heading">@title</div>
+<header class="form__section-heading">
+    <h1 class="section-headline">@title</h1>
+</header>
