--- a/frontend/app/views/event/page.scala.html
+++ b/frontend/app/views/event/page.scala.html
@@ -64,10 +64,9 @@
         <div class="event-header__container event-header__container--details">
             <div class="event-details">
                 <div class="event-details__time">
-                    <span class="event-details__time__part">@prettyDateWithTimeAndDayName(event.start)</span>
-                    @event match {
-                        case _: MasterclassEvent => { - <span class="event-details__time__part">@prettyDateWithTimeAndDayName(event.end)</span> }
-                        case _ => {}
+                    @defining(dateRange(event.start, event.end)) { dates =>
+                        <span class="event-details__time__part">@dates._1</span>
+                        - <span class="event-details__time__part">@dates._2</span>
                     }
                 </div>
                 <div class="event-details__location">
