--- a/frontend/app/views/event/masterclass.scala.html
+++ b/frontend/app/views/event/masterclass.scala.html
@@ -8,5 +8,7 @@
         <i class="event-logo icon-sprite-masterclasses"></i>
     </section>
 
+    <input type="text" id="js-filter" data-filter-field="title" />
+
     @views.html.event.list(eventPortfolio, pageInfo)
 }
