--- a/frontend/app/views/event/list.scala.html
+++ b/frontend/app/views/event/list.scala.html
@@ -17,9 +17,9 @@
                 }
                 </ul>
                 <ul class="events-list events-list--items-3 events-list__hero-descendant u-unstyled">
-                @for(event <- eventPortfolio.priority) {
-                    @fragments.event.item(event)
-                }
+                    @for(event <- eventPortfolio.priority) {
+                        @fragments.event.item(event)
+                    }
                 </ul>
             </div>
         </div>
@@ -27,19 +27,14 @@
 
     <div class="event-block">
         <div class="events-title-container">
-            <h2 class="event-block-title">what's on</h2>
+            <h2 class="event-block-title case--lower">What's on</h2>
         </div>
         <div class="events-list-container">
-            @for(eventChunk <- eventPortfolio.normal.grouped(3)) {
-                <ul class="events-list events-list--items-3 u-unstyled">
-                    @for(event <- eventChunk) {
+                <ul class="events-list u-unstyled">
+                    @for(event <- eventPortfolio.normal) {
                         @fragments.event.item(event, false)
                     }
-                    @for(i <- Range(0, 3-eventChunk.length)) {
-                        <li class="event-item events-list__item event-item--blank"></li>
-                    }
                 </ul>
-            }
         </div>
     </div>
 </section>
